# main

./: .gitignore  .gitmodules  README.md  bash-setup  docker-compose.yml
.docker/: .buildNodeID  .token_seed  config.json
.docker/buildx/: .buildNodeID
.docker/buildx/activity/: default
TrackingStuff/: SanityCheck.csv  kalmanFilterTristan.py  trackTest.ipynb  trackTest_tristan.ipynb  tracking.py  tracking_tristan.py  video.avi
docker/: bridge-docker-compose.yml  jetson-docker-compose.yml
docker-volume/: install-script.sh
docker-volume/ros_ws/: SanityCheck.csv
docker-volume/ros_ws/launch/: orin_launch.py  rs_ours_launch.py  rs_ours_multi_camera_launch.py
docker-volume/ros_ws/pose_estimator/: package.xml
docker-volume/ros_ws/pose_estimator/pose_estimator/: person_keypoints.py  pose_estimator_node.py
docker-volume/ros_ws/src/interaction_detection/: setup.py
docker-volume/ros_ws/src/interaction_detection/interaction_detection/: detectContextNode.py
docker-volume/ros_ws/src/interaction_detection/launch/: detection_pipelines.launch.py
docker-volume/ros_ws/src/multi_person_tracker/: package.xml  setup.cfg  setup.py
docker-volume/ros_ws/src/multi_person_tracker/multi_person_tracker/: kalman_filter_tristan.ipynb  multi_person_tracker.py  people_detector.py  person_keypoints.py  tracking.py
docker-volume/ros_ws/src/multi_person_tracker_interfaces/: CMakeLists.txt  package.xml
docker-volume/ros_ws/src/multi_person_tracker_interfaces/msg/: People.msg  Person.msg
docker-volume/ros_ws/src/pose_estimator/: package.xml  setup.py
docker-volume/ros_ws/src/pose_estimator/pose_estimator/: pose_estimator_node.py
docker/Nav2/: nav2.dockerfile
docker/jetson-containers-master/: Dockerfile.ros2
docker/jetson-containers-master/scripts/: ros2_build.sh
docker/jetson-humble/: Dockerfile.pytorch  Dockerfile.ros.humble  Dockerfile.ros1bridge
docker/jetson-humble/scripts/: ros2_build.sh
docker/ros1_bridge/: 10-cyclone-max.conf  cyclonedds_foxy.xml  cyclonedds_humble.xml  cyclonedds_humble:orin.xml  ros1_bridge_jetson.dockerfile  ros_entrypoint.sh
docker/skiros/: Dockerfile
docker/ursim/: dockerfile
docker/visualizer/: visualizer.dockerfile  xfce4-desktop.xml
ros1_ws/: init_goal1.sh  init_goal2.sh
ros2_ws/: bridge.yaml  controller_build.sh  init_goal.sh  init_goal1.sh  init_goal2.sh  jetson_build.sh  ros_bridge.sh  ros_packages.txt
ros2_ws/launch/: orin_launch.py  rs_ours_camera1_launch.py  rs_ours_launch.py
ros2_ws/src/: bridge.yaml  ros_bridge.sh
ros2_ws/src/context_aware_navigation/: CMakeLists.txt  layers.xml  package.xml  social_layer.xml
ros2_ws/src/context_aware_navigation/config/: comparison.rviz  social_cost_image.rviz
ros2_ws/src/context_aware_navigation/context_aware_navigation/: asymetricGausian.py
ros2_ws/src/context_aware_navigation/context_aware_navigation/models/: experimental.py
ros2_ws/src/context_aware_navigation/context_aware_navigation/utils/: autoanchor.py  datasets.py  general.py  loss.py  plots.py
ros2_ws/src/context_aware_navigation/docker/: docker-compose.yml  mir-driver.dockerfile
ros2_ws/src/context_aware_navigation/docker/mir-driver/: Dockerfile  mir-driver.dockerfile  mir-source-driver.dockerfile  ros_entrypoint.sh
ros2_ws/src/context_aware_navigation/docker/parameter_bridge/: bridge.yaml  parameter_bridge.dockerfile  ros_entrypoint.sh
ros2_ws/src/context_aware_navigation/docker/ros1_bridge/: cyclonedds_foxy.xml  cyclonedds_humble.xml  ros1_bridge.dockerfile
ros2_ws/src/context_aware_navigation/docker/skiros/: skiros-viz.conf
ros2_ws/src/context_aware_navigation/docker/ur5-driver/: ur5-driver.dockerfile
ros2_ws/src/context_aware_navigation/docker/visualizer/: index.html  littlehelper-viz.conf  nginx.conf  rqt.desktop  rviz2.desktop
ros2_ws/src/context_aware_navigation/include/context_aware_navigation/: interaction_layer.hpp  social_layer.hpp
ros2_ws/src/context_aware_navigation/launch/: bringup_launch.py  bringup_surveilance_launch.py  cohan_stage_pr2_comparison.launch.py  comparison.launch.py  localization_launch.py  mir_bringup_launch.py  mir_navigation_launch.py  navigation_launch.py  rs_ours_camera2_launch.py  tb3_simulation_launch.py
ros2_ws/src/context_aware_navigation/params/: nav2_params.yaml  nav2_params_default.yaml  nav2_params_mir.yaml
ros2_ws/src/context_aware_navigation/scripts/: AffordanceSpaceVisualization.m  detectContextNode.py  distToPeople.py  exportImagesFromRosbags.py  generate_lut_entries.py  mapRepublisher.py  measureTraveledDistance.py  mir_bridge.py  odom_tf_publisher.py  people_publisher.py  social_map_generator.py  stage_joints.py
ros2_ws/src/context_aware_navigation/scripts/models/: common.py  experimental.py  yolo.py
ros2_ws/src/context_aware_navigation/src/: interaction_layer.cpp  social_layer.cpp
ros2_ws/src/context_aware_navigation/world/: cave.world  comparison.world  comparison1_1.world  comparison1_2.world  comparison2_1.world  comparison2_2.world  comparison3_1.world  comparison3_2.world  comparison4_1.world  comparison4_2.world  comparison5_1.world  comparison5_2.world  comparison6_1.world  comparison6_2.world  comparison_simplified.world  comparison_simplified1_1.world  comparison_simplified1_2.world  comparison_simplified2_1.world  comparison_simplified2_2.world  comparison_simplified3_1.world  comparison_simplified3_2.world  comparison_simplified4_1.world  comparison_simplified4_2.world  comparison_simplified5_1.world  comparison_simplified5_2.world  comparison_simplified6_1.world  comparison_simplified6_2.world
ros2_ws/src/context_aware_navigation/world/maps/: comparison.pgm  comparison.yaml
ros2_ws/src/interaction_detection/: package.xml  setup.cfg  setup.py
ros2_ws/src/interaction_detection/interaction_detection/: detectContextNode.py
ros2_ws/src/multi_person_tracker/: package.xml
ros2_ws/src/multi_person_tracker/multi_person_tracker/: multi_person_tracker.py  person_keypoints.py
ros2_ws/src/stage_ros2_scripts/: package.xml  setup.cfg  setup.py
(+8 files in other folders)
